--- a/main.ipynb
+++ b/main.ipynb
@@ -445,88 +445,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data set size  1582\n",
-      "Feature Concatenation set size   1582\n",
-      "Trainin Data set size   1265\n",
-      "Validation Data set size   158\n",
-      "Testing Data set size   159\n"
-     ]
-    }
-   ],
-   "source": [
-    "human = DataModel()\n",
-    "human_dataset = human.generate_dataset('HUMAN',HUMAN_DATASET_PATH, HUMAN_FEATURE_DATASET)\n",
-    "\n",
-    "human_feature_concatenation, human_target = human.generate_subtraction(human_dataset)\n",
-    "\n",
-    "training_set, training_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, 0, TRAINING_PERCENTAGE)\n",
-    "validation_set, validation_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, TRAINING_PERCENTAGE, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE)\n",
-    "testing_set, testing_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE, 100)\n",
-    "\n",
-    "\n",
-    "print('Data set size  ' + str(len(human_dataset)))\n",
-    "print('Feature Concatenation set size   ' + str(len(human_feature_concatenation)))\n",
-    "print('Trainin Data set size   ' + str(len(training_set)))\n",
-    "print('Validation Data set size   ' + str(len(validation_set)))\n",
-    "print('Testing Data set size   ' + str(len(testing_set)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------Closed Form Solution--------------------\n",
-      "M = 15 \n",
-      "Lambda  = 0.0001\n",
-      "eta=0.01\n",
-      "E_rms Training   = 0.59975\n",
-      "E_rms Validation   = 0.60744\n",
-      "E_rms Testing   = 0.58275\n"
-     ]
-    }
-   ],
-   "source": [
-    "ll = LinearRegression(training_set, validation_set, testing_set)\n",
-    "ll.closed_form_solution(training_target_set, validation_target_set, testing_target_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------Gradient Descent Solution--------------------\n",
-      "M = 15 \n",
-      "Lambda  = 0.0001\n",
-      "eta=0.01\n",
-      "E_rms Training   = 0.70585\n",
-      "E_rms Validation = 0.68357\n",
-      "E_rms Testing    = 0.72983\n"
-     ]
-    }
-   ],
-   "source": [
-    "ll.sgd_form(training_target_set, validation_target_set, testing_target_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -550,12 +468,39 @@
     }
    ],
    "source": [
+    "human = DataModel()\n",
+    "human_dataset = human.generate_dataset('HUMAN',HUMAN_DATASET_PATH, HUMAN_FEATURE_DATASET)\n",
+    "\n",
+    "human_feature_concatenation, human_target = human.generate_subtraction(human_dataset)\n",
+    "\n",
+    "training_set, training_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, 0, TRAINING_PERCENTAGE)\n",
+    "validation_set, validation_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, TRAINING_PERCENTAGE, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE)\n",
+    "testing_set, testing_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE, 100)\n",
+    "\n",
+    "print('Data set size  ' + str(len(human_dataset)))\n",
+    "print('Feature Concatenation set size   ' + str(len(human_feature_concatenation)))\n",
+    "print('Trainin Data set size   ' + str(len(training_set)))\n",
+    "print('Validation Data set size   ' + str(len(validation_set)))\n",
+    "print('Testing Data set size   ' + str(len(testing_set)))\n",
+    "\n",
+    "\n",
+    "ll = LinearRegression(training_set, validation_set, testing_set)\n",
+    "ll.closed_form_solution(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
+    "ll.sgd_form(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
     "lr = LogisticRegression(training_set, training_target_set)\n",
     "lr.logistic_regression()\n",
+    "\n",
     "print ('----------  Logistic Regression Solution   --------------------')\n",
     "print(lr.final_score(training_set, training_target_set))\n",
     "print(lr.final_score(validation_set, validation_target_set))\n",
-    "print(lr.final_score(testing_set, testing_target_set))"
+    "print(lr.final_score(testing_set, testing_target_set))\n",
+    "\n",
+    "nn = NeuralNetworkModel(training_set, validation_set, testing_set)\n",
+    "history = nn.fit(training_target_set)\n",
+    "# nn.show(history)\n",
+    "# nn.predict(testing_target_set)"
    ]
   },
   {
@@ -687,13 +632,7 @@
       "1012/1012 [==============================] - 0s 28us/step - loss: 0.6858 - acc: 0.5455 - val_loss: 0.6904 - val_acc: 0.5415\n",
       "Epoch 51/10000\n",
       "1012/1012 [==============================] - 0s 29us/step - loss: 0.6928 - acc: 0.5277 - val_loss: 0.6899 - val_acc: 0.5217\n",
-      "Epoch 52/10000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 52/10000\n",
       "1012/1012 [==============================] - 0s 36us/step - loss: 0.6915 - acc: 0.5326 - val_loss: 0.6888 - val_acc: 0.5296\n",
       "Epoch 53/10000\n",
       "1012/1012 [==============================] - 0s 27us/step - loss: 0.6884 - acc: 0.5474 - val_loss: 0.6902 - val_acc: 0.5455\n",
@@ -840,8 +779,37 @@
     }
    ],
    "source": [
+    "human = DataModel()\n",
+    "human_dataset = human.generate_dataset('HUMAN',HUMAN_DATASET_PATH, HUMAN_FEATURE_DATASET)\n",
+    "\n",
+    "human_feature_concatenation, human_target = human.generate_feature_concatenation(human_dataset)\n",
+    "\n",
+    "training_set, training_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, 0, TRAINING_PERCENTAGE)\n",
+    "validation_set, validation_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, TRAINING_PERCENTAGE, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE)\n",
+    "testing_set, testing_target_set = human.get_segregated_dataset(human_feature_concatenation, human_target, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE, 100)\n",
+    "\n",
+    "print('Data set size  ' + str(len(human_dataset)))\n",
+    "print('Feature Concatenation set size   ' + str(len(human_feature_concatenation)))\n",
+    "print('Trainin Data set size   ' + str(len(training_set)))\n",
+    "print('Validation Data set size   ' + str(len(validation_set)))\n",
+    "print('Testing Data set size   ' + str(len(testing_set)))\n",
+    "ll = LinearRegression(training_set, validation_set, testing_set)\n",
+    "ll.closed_form_solution(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
+    "ll.sgd_form(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
+    "lr = LogisticRegression(training_set, training_target_set)\n",
+    "lr.logistic_regression()\n",
+    "\n",
+    "print ('----------  Logistic Regression Solution   --------------------')\n",
+    "print(lr.final_score(training_set, training_target_set))\n",
+    "print(lr.final_score(validation_set, validation_target_set))\n",
+    "print(lr.final_score(testing_set, testing_target_set))\n",
+    "\n",
     "nn = NeuralNetworkModel(training_set, validation_set, testing_set)\n",
-    "history = nn.fit(training_target_set)"
+    "history = nn.fit(training_target_set)\n",
+    "# nn.show(history)\n",
+    "# nn.predict(testing_target_set)"
    ]
   },
   {
@@ -871,8 +839,37 @@
     }
    ],
    "source": [
-    "nn.show(history)\n",
-    "nn.predict(testing_target_set)"
+    "gsc = DataModel()\n",
+    "gsc_dataset = human.generate_dataset('GSC',GSC_DATASET_PATH, GSC_FEATURE_DATASET)\n",
+    "\n",
+    "gsc_feature_concatenation, gsc_target = gsc.generate_subtraction(gsc_dataset)\n",
+    "\n",
+    "training_set, training_target_set = gsc.get_segregated_dataset(gsc_feature_concatenation, gsc_target, 0, TRAINING_PERCENTAGE)\n",
+    "validation_set, validation_target_set = gsc.get_segregated_dataset(gsc_feature_concatenation, gsc_target, TRAINING_PERCENTAGE, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE)\n",
+    "testing_set, testing_target_set = gsc.get_segregated_dataset(gsc_feature_concatenation, gsc_target, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE, 100)\n",
+    "\n",
+    "print('Data set size  ' + str(len(human_dataset)))\n",
+    "print('Feature Concatenation set size   ' + str(len(human_feature_concatenation)))\n",
+    "print('Trainin Data set size   ' + str(len(training_set)))\n",
+    "print('Validation Data set size   ' + str(len(validation_set)))\n",
+    "print('Testing Data set size   ' + str(len(testing_set)))\n",
+    "ll = LinearRegression(training_set, validation_set, testing_set)\n",
+    "ll.closed_form_solution(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
+    "ll.sgd_form(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
+    "lr = LogisticRegression(training_set, training_target_set)\n",
+    "lr.logistic_regression()\n",
+    "\n",
+    "print ('----------  Logistic Regression Solution   --------------------')\n",
+    "print(lr.final_score(training_set, training_target_set))\n",
+    "print(lr.final_score(validation_set, validation_target_set))\n",
+    "print(lr.final_score(testing_set, testing_target_set))\n",
+    "\n",
+    "nn = NeuralNetworkModel(training_set, validation_set, testing_set)\n",
+    "history = nn.fit(training_target_set)\n",
+    "# nn.show(history)\n",
+    "# nn.predict(testing_target_set)"
    ]
   },
   {
@@ -880,7 +877,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gsc = DataModel()\n",
+    "gsc_dataset = human.generate_dataset('GSC',GSC_DATASET_PATH, GSC_FEATURE_DATASET)\n",
+    "\n",
+    "gsc_feature_concatenation, gsc_target = gsc.generate_feature_concatenation(gsc_dataset)\n",
+    "\n",
+    "training_set, training_target_set = gsc.get_segregated_dataset(gsc_feature_concatenation, gsc_target, 0, TRAINING_PERCENTAGE)\n",
+    "validation_set, validation_target_set = gsc.get_segregated_dataset(gsc_feature_concatenation, gsc_target, TRAINING_PERCENTAGE, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE)\n",
+    "testing_set, testing_target_set = gsc.get_segregated_dataset(gsc_feature_concatenation, gsc_target, TRAINING_PERCENTAGE + VALIDATION_PERCENTAGE, 100)\n",
+    "\n",
+    "print('Data set size  ' + str(len(human_dataset)))\n",
+    "print('Feature Concatenation set size   ' + str(len(human_feature_concatenation)))\n",
+    "print('Trainin Data set size   ' + str(len(training_set)))\n",
+    "print('Validation Data set size   ' + str(len(validation_set)))\n",
+    "print('Testing Data set size   ' + str(len(testing_set)))\n",
+    "ll = LinearRegression(training_set, validation_set, testing_set)\n",
+    "ll.closed_form_solution(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
+    "ll.sgd_form(training_target_set, validation_target_set, testing_target_set)\n",
+    "\n",
+    "lr = LogisticRegression(training_set, training_target_set)\n",
+    "lr.logistic_regression()\n",
+    "\n",
+    "print ('----------  Logistic Regression Solution   --------------------')\n",
+    "print(lr.final_score(training_set, training_target_set))\n",
+    "print(lr.final_score(validation_set, validation_target_set))\n",
+    "print(lr.final_score(testing_set, testing_target_set))\n",
+    "\n",
+    "nn = NeuralNetworkModel(training_set, validation_set, testing_set)\n",
+    "history = nn.fit(training_target_set)\n",
+    "# nn.show(history)\n",
+    "# nn.predict(testing_target_set)"
+   ]
   }
  ],
  "metadata": {
